2002-09-27 grondo
	* Make-rpm.mk: Updated rpm target for compatibility with automake
	* pdsh.1.in, pdcp.1.in: Improve documentation of 
	  hostname range handling (gnat pdsh/97)

2002-09-26 grondo
	* configure.ac: workaround autoconf-2.53 bug affecting improper
	  expansion of path in AC_PATH_PROG macro (fix for pdsh/116)

2002-09-26 garlick
	* Mark fixed pdsh/118 (bad usage of hostlist api)
	* Removed possibilty of string overflow in a couple places.
	* Taggged pdsh-1-7-3chaos (sent to LNXI for MCR)

2002-09-12 garlick
	* Reordered ChangeLog in reverse chronological order.
	* Mark fixed Elan context number wrap-around bug.

2002-09-12 garlick
	* Repair a file descriptor leak in rcp_thread  (gnat pdsh/113)
	* More error reporting in qswutil.c, qcmd.c, qshd.c
	* Fixed bug in sending of long bitmaps.
	* Taggged pdsh-1-7-2chaos (sent to LNXI for MCR)

2002-09-03 grondo
	* Automake-ified
	* Have `dshbak -c' generate bracketed ranges compatible with pdsh -w
	* Updated testsuite for compatibility with bracketed host ranges

2002-08-12 garlick
	* Make all static "helper" functions underbar-prefixed.

2002-08-11 garlick
	* If no genders, mpich machines, or SDR, allow configuration, but 
	  pdsh -a generates an error.
	* Fix SDR wcoll generation to use hostlist package.
	* Fixed --enable-debug option in configure.ac.
	* Removed range operator configurability altogether.
	* Enable "reckless hostrange expansion" (foo1-4 style ranges) for AIX


2002-08-10 garlick
	* Broke TODO out of ChangeLog
	* Removed aborted attempt at QsNet cleanup (libqsw dir)
	* Added support for Mark's hostlist.[ch].
	* Added COPYING and added GPL headers to source modules.
	* Removed code that deleted unreachable hosts from the target list in
	  interactive mode.  This didn't work because we fork for each
	  round.  Got rid of -c option which was used to disable this behavior.
	  As this has not worked for a long time, probably won't be missed.